# personal-rust-cookbook

./: .gitignore
ch-1/: arithmetic.rs  array.rs  assignment.rs  boolean.rs  calculator.rs  decimal.rs  mutable.rs  sample.rs  string.rs  tuple.rs  vector.rs
ch-2/: binding.rs  closure.rs  condition.rs  constant.rs  enum.rs  expression.rs  implement.rs  looping.rs  pointer.rs  struct.rs  trait.rs  typecasting.rs
ch-3/sample/: Cargo.toml
ch-3/sample/src/: main.rs
ch-4/: control.rs  sample_mod.rs  sample_nested.rs  sample_struct.rs
